39-minimal-eks-cluster-with-load-balancer-controller-custom-domain/kubernetes-files/load-balancer-test/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx-deployment
  namespace: production
spec:
  # type: ClusterIP  # default
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deployment
